--- a/templates/base.html
+++ b/templates/base.html
@@ -272,7 +272,6 @@
     <script type="module" src="https://www.gstatic.com/firebasejs/10.7.1/firebase-storage-compat.js"></script>
     
     <!-- App Scripts -->
-    <script type="module" src="src/app-auth.js"></script>
     <script type="module" src="src/storage.js"></script>
     <script type="module" src="src/globals.js"></script>
     <script type="module" src="src/utils.js"></script>
@@ -280,11 +279,9 @@
     
     <!-- Template initialization -->
     <script type="module">
-        import { initAppAuth } from './src/app-auth.js';
         import { initNavigation } from './includes/navigation.js';
         
-        // Initialize authentication for all pages
-        initAppAuth();
+        // Unified auth is auto-initialized, no need to call initAppAuth
         
         // Initialize navigation for all pages
         initNavigation();
